reports/ModelModel_code.log
Traceback (most recent call last):
  File "/opt/anaconda3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/opt/anaconda3/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# Run dependencies
%run ./model_python_lib_utils.ipynb
%run ./model_python_lib_event_counts.ipynb
%run ./model_python_lib_decision_functions.ipynb
%run ./model_python_lib_visualization.ipynb
------------------

Traceback [0;36m(most recent call last)[0m:

  File [1;32m"/opt/anaconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py"[0m, line [1;32m3444[0m, in [1;35mrun_code[0m
    exec(code_obj, self.user_global_ns, self.user_ns)

  File [1;32m"/var/folders/tm/sjjwcmbs3250mhfs5psrzf5w0000gn/T/ipykernel_30227/421172343.py"[0m, line [1;32m5[0m, in [1;35m<module>[0m
    get_ipython().run_line_magic('run', './model_python_lib_visualization.ipynb')

  File [1;32m"/opt/anaconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py"[0m, line [1;32m2351[0m, in [1;35mrun_line_magic[0m
    result = fn(*args, **kwargs)

  File [1;32m"/opt/anaconda3/lib/python3.9/site-packages/decorator.py"[0m, line [1;32m232[0m, in [1;35mfun[0m
    return caller(func, *(extras + args), **kw)

  File [1;32m"/opt/anaconda3/lib/python3.9/site-packages/IPython/core/magic.py"[0m, line [1;32m187[0m, in [1;35m<lambda>[0m
    call = lambda f, *a, **k: f(*a, **k)

  File [1;32m"/opt/anaconda3/lib/python3.9/site-packages/IPython/core/magics/execution.py"[0m, line [1;32m724[0m, in [1;35mrun[0m
    self.shell.safe_execfile_ipy(filename, raise_exceptions=True)

  File [1;32m"/opt/anaconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py"[0m, line [1;32m2838[0m, in [1;35msafe_execfile_ipy[0m
    result.raise_error()

  File [1;32m"/opt/anaconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py"[0m, line [1;32m330[0m, in [1;35mraise_error[0m
    raise self.error_before_exec

  File [1;32m"/opt/anaconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py"[0m, line [1;32m3143[0m, in [1;35mrun_cell_async[0m
    code_ast = compiler.ast_parse(cell, filename=cell_name)

[0;36m  File [0;32m"/opt/anaconda3/lib/python3.9/site-packages/IPython/core/compilerop.py"[0;36m, line [0;32m101[0;36m, in [0;35mast_parse[0;36m[0m
[0;31m    return compile(source, filename, symbol, self.flags | PyCF_ONLY_AST, 1)[0m

[0;36m  File [0;32m"/var/folders/tm/sjjwcmbs3250mhfs5psrzf5w0000gn/T/ipykernel_30227/3635694259.py"[0;36m, line [0;32m79[0m
[0;31m    plt.savefig(os.path.join('/img', 'critical_trial_intervention_dist.pdf'), dpi=300, bbox_inches='tight', transparent=True)[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (3635694259.py, line 79)

